--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
         "postcss": "^8.1.14",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.5.4"
+    },
+    "dependencies": {
+        "vue": "^3.2.26",
+        "vue-loader": "^17.0.0",
+        "vue-router": "^4.0.12"
     }
 }
