--- a/package.json
+++ b/package.json
@@ -7,18 +7,25 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "test": "jest"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
+        "@types/jest": "^27.0.3",
+        "@vue/test-utils": "^2.0.0-rc.17",
+        "@vue/vue3-jest": "^27.0.0-alpha.4",
         "axios": "^0.21",
+        "babel-jest": "^27.4.5",
         "bootstrap": "^5.1.3",
+        "jest": "^27.4.5",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
+        "ts-jest": "^27.1.2",
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.4"
     },
